# 6502_emulator

./: .gitignore  CMakeLists.txt  main.cpp
inc/Bus/: Bus.h  IBus.h
inc/CPU/: Addressing.h  AddressingData.h  AddressingMode.h  CPU.h  ICPU.h  Registers.h
inc/Instruction/: Addressing.h  AddressingMode.cpp  AddressingMode.h  Instruction.h  Instructions.h
inc/Instruction/Instructions/: ADC.h  AND.h  ASL.h  BCC.h  BCS.h  BEQ.h  BIT.h  BMI.h  BNE.h  BPL.h  BRK.h  BVC.h  BVS.h  CLC.h  CLD.h  CLI.h  CLV.h  CMP.h  CPX.h  CPY.h  DEC.h  DEX.h  DEY.h  EOR.h  INC.h  INX.h  INY.h  Instructions.h  JMP.h  JSR.h  LDA.h  LDX.h  LDY.h  LSR.h  NOP.h  ORA.h  PHA.h  PHP.h  PLA.h  PLP.h  (+17 more)
inc/Memory/: Memory.h
inc/OpCodes/: OpCodes.h
src/: CMakeLists.txt  main.cpp
src/Bus/: Bus.cpp  CMakeLists.txt
src/CPU/: Addressing.cpp  AddressingMode.cpp  CMakeLists.txt  CPU.cpp  ICPU.cpp
src/Instruction/: AddressingMode.cpp  CMakeLists.txt  Instruction.cpp
src/Instruction/Instructions/: ADC.cpp  AND.cpp  ASL.cpp  BCC.cpp  BCS.cpp  BEQ.cpp  BIT.cpp  BMI.cpp  BNE.cpp  BPL.cpp  BRK.cpp  BVC.cpp  BVS.cpp  CLC.cpp  CLD.cpp  CLI.cpp  CLV.cpp  CMP.cpp  CPX.cpp  CPY.cpp  DEC.cpp  DEX.cpp  DEY.cpp  EOR.cpp  INC.cpp  INX.cpp  INY.cpp  JMP.cpp  JSR.cpp  LDA.cpp  LDX.cpp  LDY.cpp  LSR.cpp  NOP.cpp  ORA.cpp  PHA.cpp  PHP.cpp  PLA.cpp  PLP.cpp  ROL.cpp  (+16 more)
src/Memory/: CMakeLists.txt  Memory.cpp
test/: CMakeLists.txt
test/CPU/: CMakeLists.txt  cpu_test.cpp
test/CPU/opcodes/: CMakeLists.txt  test.cpp
test/Instructions/: CMakeLists.txt  LDA_test.cpp
test/Instructions/ADC/: CMakeLists.txt  test.cpp
test/Instructions/AND/: CMakeLists.txt  test.cpp
test/Instructions/ASL/: CMakeLists.txt  test.cpp
test/Instructions/BCC/: CMakeLists.txt  test.cpp
test/Instructions/BCS/: CMakeLists.txt  test.cpp
test/Instructions/BEQ/: CMakeLists.txt  test.cpp
test/Instructions/BIT/: CMakeLists.txt  test.cpp
test/Instructions/BMI/: CMakeLists.txt  test.cpp
test/Instructions/BNE/: CMakeLists.txt  test.cpp
test/Instructions/BPL/: CMakeLists.txt  test.cpp
test/Instructions/BRK/: CMakeLists.txt  test.cpp
test/Instructions/BVC/: CMakeLists.txt  test.cpp
test/Instructions/BVS/: CMakeLists.txt  test.cpp
test/Instructions/CLC/: CMakeLists.txt  test.cpp
test/Instructions/CLD/: CMakeLists.txt  test.cpp
test/Instructions/CLI/: CMakeLists.txt  test.cpp
test/Instructions/CLV/: CMakeLists.txt  test.cpp
test/Instructions/CMP/: CMakeLists.txt  test.cpp
test/Instructions/CPX/: CMakeLists.txt  test.cpp
test/Instructions/CPY/: CMakeLists.txt  test.cpp
test/Instructions/DEC/: CMakeLists.txt  test.cpp
test/Instructions/DEX/: CMakeLists.txt  test.cpp
test/Instructions/DEY/: CMakeLists.txt  test.cpp
test/Instructions/EOR/: CMakeLists.txt  test.cpp
test/Instructions/INC/: CMakeLists.txt  test.cpp
test/Instructions/INX/: CMakeLists.txt  test.cpp
test/Instructions/INY/: CMakeLists.txt  test.cpp
test/Instructions/JMP/: CMakeLists.txt  test.cpp
test/Instructions/JSR/: CMakeLists.txt  test.cpp
test/Instructions/LDA/: CMakeLists.txt  LDA_test.cpp  test.cpp
test/Instructions/LDX/: CMakeLists.txt  test.cpp
test/Instructions/LDY/: CMakeLists.txt  test.cpp
test/Instructions/LSR/: CMakeLists.txt  test.cpp
test/Instructions/ORA/: CMakeLists.txt  test.cpp
test/Instructions/PHA/: CMakeLists.txt  test.cpp
test/Instructions/PHP/: CMakeLists.txt  test.cpp
test/Instructions/PLA/: CMakeLists.txt  test.cpp
test/Instructions/PLP/: CMakeLists.txt  test.cpp
test/Instructions/ROL/: CMakeLists.txt  test.cpp
test/Instructions/ROR/: CMakeLists.txt  test.cpp
test/Instructions/RTI/: CMakeLists.txt  test.cpp
test/Instructions/SBC/: CMakeLists.txt  test.cpp
test/Instructions/SEC/: CMakeLists.txt  test.cpp
test/Instructions/SED/: CMakeLists.txt  test.cpp
test/Instructions/SEI/: CMakeLists.txt  test.cpp
test/Instructions/STA/: CMakeLists.txt  test.cpp
test/Instructions/STX/: CMakeLists.txt  test.cpp
test/Instructions/STY/: CMakeLists.txt  test.cpp
test/Instructions/TAX/: CMakeLists.txt  test.cpp
test/Instructions/TAY/: CMakeLists.txt  test.cpp
test/Instructions/TSX/: CMakeLists.txt  test.cpp
test/Instructions/TXA/: CMakeLists.txt  test.cpp
test/Instructions/TXS/: CMakeLists.txt  test.cpp
test/Instructions/TYA/: CMakeLists.txt  test.cpp
test/Memory/: CMakeLists.txt  Memory_Test.cpp
test/Programs/: CMakeLists.txt
test/Programs/BasicProgram0/: test.cpp
test/Programs/BasicPrograms/: CMakeLists.txt  test.cpp
