add_subdirectory(ADC)
add_subdirectory(LDA)
add_subdirectory(LDX)
add_subdirectory(LDY)
add_subdirectory(JSR)
add_subdirectory(LSR)
add_subdirectory(ORA)
add_subdirectory(AND)
add_subdirectory(ASL)
add_subdirectory(BCC)
add_subdirectory(BCS)
add_subdirectory(BEQ)
add_subdirectory(BIT)
add_subdirectory(BMI)
add_subdirectory(BNE)
add_subdirectory(BPL)
add_subdirectory(PHA)
add_subdirectory(PHP)
add_subdirectory(PLA)
add_subdirectory(PLP)
add_subdirectory(ROL)
add_subdirectory(ROR)
add_subdirectory(RTI)