add_subdirectory(ADC)
add_subdirectory(AND)
add_subdirectory(ASL)
add_subdirectory(BCC)
add_subdirectory(BCS)
add_subdirectory(BEQ)
add_subdirectory(BIT)
add_subdirectory(BMI)
add_subdirectory(BNE)
add_subdirectory(BPL)
add_subdirectory(PHA)
add_subdirectory(PHP)
add_subdirectory(PLA)
add_subdirectory(PLP)
add_subdirectory(ROL)
add_subdirectory(ROR)
add_subdirectory(RTI)
add_subdirectory(BRK)
add_subdirectory(BVC)
add_subdirectory(BVS)
add_subdirectory(CLC)
add_subdirectory(CLD)
add_subdirectory(CLI)
add_subdirectory(CLV)
add_subdirectory(CMP)
add_subdirectory(CPX)
add_subdirectory(CPY)
add_subdirectory(DEC)
add_subdirectory(DEX)
add_subdirectory(DEY)
add_subdirectory(EOR)
add_subdirectory(INC)
add_subdirectory(INX)
add_subdirectory(INY)
add_subdirectory(JMP)
add_subdirectory(LDA)
add_subdirectory(LDX)
add_subdirectory(LDY)
add_subdirectory(JSR)
add_subdirectory(LSR)
add_subdirectory(ORA)
